--- a/assets/style/login.css
+++ b/assets/style/login.css
@@ -3,7 +3,7 @@
     margin: 0;
     box-sizing: border-box;
     color: #000000;
-    font-family: "Roboto",sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 body{
     width: 100vw;
